correct aurora citation

--- a/auroralightLondon2019.tex
+++ b/auroralightLondon2019.tex
@@ -315,7 +315,7 @@ $\ver$'s work: only \emph{one} evaluation of $S$!
  \vspace{0.4in}
  \end{frame}
 
- %\small{[BCRSV19, G19]}
+ %\small{[BCRSVW19, G19]}
   \begin{frame}
 \frametitle{3rd application: sumchecks }
  \end{frame}
@@ -331,7 +331,7 @@ $\ver$ wants to check:
 
 
   \begin{frame}
-\frametitle{The Aurora trick for sumcheck \small{[BCRSV19]}}
+\frametitle{The Aurora trick for sumcheck \small{[BCRSVW19]}}
 \begin{lemma}
  When $H\subset \F$ is a multiplicative subgroup of size $n$, and $deg(g)<n$
 \[\sum_{x\in H} g(x) =0\]
@@ -343,7 +343,7 @@ iff $g$ has constant coefficient $0$.
 
 
   \begin{frame}
-\frametitle{The Aurora trick for sumcheck \small{[BCRSV19]}}
+\frametitle{The Aurora trick for sumcheck \small{[BCRSVW19]}}
 $Z_H \defeq \prod_{x\in H}(X-x)$
  \vspace{0.4in}
 
