--- a/PlonkSimonsCorrected.tex
+++ b/PlonkSimonsCorrected.tex
@@ -91,7 +91,7 @@
   \begin{enumerate}
 %\item The protocol definition includes a set of \emph{preprocessed polynomials} $g_1,\ldots,g_\ell \in \polysofdeg{d}$.
 
-\item All you need is a permutation check.
+\item All you need is a permutation check.\pause 
  \item Permutations are easier to check on mutliplicative subgroups
 \end{enumerate}
 
