--- a/polyprottechnionseminar2020.tex
+++ b/polyprottechnionseminar2020.tex
@@ -130,7 +130,7 @@ $\prv$'s  msgs are to ideal party $\ideal$. Must be $f_i\in \polysofdeg{d}$.
 \begin{frame}
 
 
-$$\aggdeg{\prot}\defeq\left(\sum_{i\in [t]} \deg(f_i)+1\right)$$.\pause \\
+$$\aggdeg{\prot}\defeq\left(\sum_{i\in [\ell]} \deg(f_i)+1\right)$$.\pause \\
  \vspace{0.2in}
 \textbf{Thm:\footnote{similar statements in Marlin/Fractal/Supersonic}}
 Can compile to ``real'' protocol in Algebraic Group Model, where prover complexity ~ $\aggdeg{\prot}$ .\\ \pause
@@ -175,7 +175,7 @@ $Z_H(X)\defeq \prod_{a\in H}(X-a)$. \\
 \begin{frame}
 \frametitle{$H$-ranged protocol using polynomial protocol:}   % Insert frame title between curly braces
 Motivates - for $H$-ranged protocol $\prot$ define
- \[\aggdeg{\prot}\defeq \left(\sum_{i\in [t]} \deg(f_i)+1\right) + D- |H|.\]
+ \[\aggdeg{\prot}\defeq \left(\sum_{i\in [\ell]} \deg(f_i)+1\right) + D- |H|.\]
 
 $D\defeq$ max degree of identity $C$ checked in exec with honest $\prv$.\\
  \vspace{0.2in}
