--- a/PlonkSimonsCorrected.tex
+++ b/PlonkSimonsCorrected.tex
@@ -33,8 +33,8 @@
 \newcommand{\gen}{\alpha}
 %\setbeamersize{text margin left=3mm,text margin right=3mm} 
 \title{\large{PLONK: Permutations over Lagrange-Bases for Oecumenical Noninteractive arguments of Knowledge}}    % Enter your title between curly braces
-\author{\small{Ariel Gabizon  \; Zachary J. Williamson   \;Oana Ciobotaru}\\                 % Enter your name between curly braces
-\tt{\footnotesize{Protocol Labs   \;\;\;\;\;\; Aztec Protocol   \;\;\;\;\;\;\;\;\;\;\;\;     \;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;     \;\;            \;\;\;\;\;\;\;\;\;\;\;\;          \;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;}                                       } }      % Enter your institute name between curly braces
+\author{\small{Ariel Gabizon}\\                 % Enter your name between curly braces
+\tt{\footnotesize{Zeta Function Technologies}                                       } }      % Enter your institute name between curly braces
 \date{}                    % Enter the date or \today between curly braces
 %\usefonttheme{professionalfonts}
 %\usefonttheme[onlymath]{serif}
